edit: footer fix: card-array shifting and centering

--- a/src/css/footer.css
+++ b/src/css/footer.css
@@ -1,5 +1,13 @@
+footer {
+  background-color: #d3c0c0;
+  padding: 2rem 5rem;
+}
+
 a {
   text-decoration: inherit;
+}
+a:hover {
+  color: #535bf2;
 }
 
 .logo {
