--- a/src/style.css
+++ b/src/style.css
@@ -13,22 +13,24 @@
   text-rendering: optimizeLegibility;
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
-}
 
-a:hover {
-  color: #535bf2;
+  overflow-y: scroll;
 }
 
 body {
   margin: 0;
   min-width: 320px;
-  min-height: 100vh;
+}
+
+footer {
+  max-height: 10rem;
 }
 
 #app {
-  max-width: 80rem;
+  max-width: 60rem;
   margin: 0 auto;
   padding: 2rem;
+  min-height: calc(100vh - 18rem);
 }
 
 .btn {
@@ -82,26 +84,26 @@ body {
 }
 
 .filter-form .btn-sort {
-  /* background-color: #1a1a1a; */
   border-radius: 0.8rem;
   width: 8rem;
   height: 100%;
-  /* color: aliceblue; */
 }
 
 .card-array {
   display: flex;
-  justify-content: center;
+  justify-content: flex-start;
   flex-wrap: wrap;
   gap: 1rem;
-  width: fit-content;
+  padding: 0;
+  margin: 0 auto;
+  width: 56rem;
 }
 
 .user-card {
   background-color: brown;
   border-radius: 0.3em 0.3em 0.4em 0.4em;
   padding: 0;
-  width: 18em;
+  width: 18rem;
 }
 
 .user-card .card-body {
